# pd_code_de_r1

./: README.md  pyproject.toml
pd_code_de_r1/: __init__.py  main.py
